welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:3: error: not found: value estsurbiscuit
while(nbBiscuit < 4) {avance();if(!estsurbiscuit){avance();nbBiscuit = nbBiscuit + 1}}
                                   ^